--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
                 width: 30%;
                 height: fit-content;
                 margin-top: 24px;
-                padding: 32px 12px;G
+                padding: 32px 12px;
                 transition: .5s ease-in-out;
                 cursor: pointer;
             }
